--- a/vercel.json
+++ b/vercel.json
@@ -5,10 +5,8 @@
         "use": "@vercel/node"
     }
 ],
-"routes": [
-    {
-        "src": "/(.*)",
-        "dest" : "/"
-    }
-]
+"rewrites": 
+[
+    { "source": "/(.*)", "destination": "/api" }
+] 
 }
